fix event box spacing

--- a/src/components/about/past_events/create_event.css
+++ b/src/components/about/past_events/create_event.css
@@ -14,6 +14,10 @@
     flex-direction: column;
 }
 
+.logistics-text {
+    margin: -20px 0 -20px 0;
+}
+
 .event-logistics {
     display: flex;
     align-items: center;
